# TeamIT_Server

./: .env.prod  .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  main.py  requirements.txt
api-gateway/: Dockerfile  requirements.txt
api-gateway/app/: config.py  main.py
api-gateway/app/router/: gateway_router.py
api-gateway/app/utils/: retry.py
app/: main.py
app/api/v1_router/: __init__.py  auth_router.py  comment_router.py  file_router.py  notification_router.py  project_router.py  team_router.py  user_router.py
app/config/: config.py
app/core/: config.py  security.py
app/services/: oauth_service.py
auth-service/: Dockerfile  requirements.txt
auth-service/app/: main.py
auth-service/tests/: test_auth.py
docker/base/: Dockerfile
init/: init.sql  postgres.env
notification-service/: Dockerfile  requirements.txt
notification-service/app/: main.py
notification-service/tests/: test_notification_router.py
project-service/: Dockerfile
project-service/app/: main.py
project-service/tests/: test_project_router.py
scripts/: build-base-image.sh
shared/: pyproject.toml
shared/config/: base_config.py  settings.py
shared/core/: discovery.py  exceptions.py  health.py  logging.py  startup.py
shared/database/: __init__.py  mongo.py  mongodb.py  postgres.py
shared/utils/: env_validator.py
team-service/: Dockerfile
team-service/app/: config.py  main.py
team-service/tests/: test_conf.py  test_team_router.py
user-service/: Dockerfile
user-service/app/: main.py
user-service/tests/: test_user.py
(+5 files in other folders)
