[project]
name = "shared"
version = "0.1.0"
description = "공통 유틸, 설정, DB 연결 모듈"
authors = [{ name = "LSJ", email = "hhee200456@gmail.com" }]
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["config", "database", "utils"]